Fix grammar errors.

--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -35,7 +35,7 @@ Layout: false
         markdown:
           ImageResizer is the result of 9 years of continual refinement, with a focus on security, stability, and image quality. Thousands of popular websites rely on ImageResizer; some with millions of pageviews each day, like [Sierra Trading Post, MSN, and eBay](/testimonials).
 
-          It provides far more than image resizing; [with our 40+ plugins](/plugins), it becomes a **comprehensive media processing suite**.
+          It provides far more than image resizing; [with our 40+ plugins](/plugins), it becomes a **comprehensive media-processing suite**.
 
           Don't doom your site to inevitable instability by [using flawed code from the internet](http://nathanaeljones.com/163/20-image-resizing-pitfalls/). Our core library is compact, free, and well-tested. `Install-Package ImageResizer`.
 
@@ -54,7 +54,7 @@ Layout: false
           | Word-of-mouth is very important; tell your friends! Blogging about ImageResizer 
           a href="/support" can earn you priority support
           | .
-        h4 Last and least, the requisite clichè sharing icons:
+        h4 Last and least, the requisite cliché sharing icons:
 
 
         - if page.lib?('plusone')
@@ -77,7 +77,7 @@ Layout: false
 
           We provide free support for all bug-related requests, and [**offer a $5-$100 reward** for discovering a bug (details)](/support#bugbounty). 
 
-          *Please* reserve on-page comments for questions and clarifications *related to to the current page*. The comments are *not* the appropriate place to ask for support or troubleshooting assistance.
+          *Please* reserve on-page comments for questions and clarifications *related to the current page*. The comments are *not* the appropriate place to ask for support or troubleshooting assistance.
 
                 
      
