--- a/content/index.slim
+++ b/content/index.slim
@@ -223,7 +223,7 @@ hr
             h2.sidespace
               |Meet the Staff
             p.sidespace
-              |The same small size that ensures personalized service for all of our clients also lets us to show you literally everyone in our company on one webpage. Come and see who'll answer that email you sent us.
+              |The same small size that ensures personalized service for all our clients also lets us show you everyone in our company on a single page. Come and see who'll answer that email you sent us.
             .home3
               a href="/staff" class="btn btn-primary"
                 | Staff Page
