Fix many spelling errors

--- a/content/benefits/comprehensive.slim
+++ b/content/benefits/comprehensive.slim
@@ -5,8 +5,8 @@ h1 Comprehensive Imaging Suite
 
 h2 Superior image processing
 
-p Get the best out of your images with minimal effort. Our adjustments are designed to support both automatic an manual modes, so you can process millions of images without losing the ability to tweak. 
-p All commands are nondestuctive, giving you free reign to experiment endlessly and revert easily by removing your commands. Unlike other web-based editors, all commands are processed in a single stage, eliminating quality loss from repeated compression.
+p Get the best out of your images with minimal effort. Our adjustments are designed to support both automatic and manual modes, so you can process millions of images without losing the ability to tweak. 
+p All commands are non-destructive, giving you free reign to experiment endlessly and revert easily by removing your commands. Unlike other web-based editors, all commands are processed in a single stage, eliminating quality loss from repeated compression.
 
 h2 Transform
 - def widths(*cols); cols.map{|w| (w / cols.inject(:+).to_f * (269 - 10 * (cols.count - 1))).round  } end;
