--- a/content/benefits/index.slim
+++ b/content/benefits/index.slim
@@ -27,7 +27,7 @@ h1 Benefits
         i.ico-white.circle-color-full.ico-shield
         h3 Secure and stable
         markdown:
-          Secure by default, ImageResizer protects againsts DDOS and XSS attacks and minimizes attack surface with a plugin model.
+          Secure by default, ImageResizer protects against DDOS and XSS attacks and minimizes attack surface with a plugin model.
           Unlike most imaging libraries, ImageResizer was designed for server-side use and multi-year uptimes since day 1.
         .clear
 .row
