--- a/content/plugins/editions/creative.slim
+++ b/content/plugins/editions/creative.slim
@@ -15,7 +15,7 @@ ul.arrow_list
 
   li: markdown: Trim excess whitespace from your product photos - automatically.
 
-  li Change image aspect ratio - without distorion or cropping - with engery-aware seam carving.
+  li Change image aspect ratio - without distortion or cropping - with energy-aware seam carving.
 
   li Process RAW, CR2, NEF, and PSD files from your web browser.
 
