--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -38,7 +38,7 @@ h1 Support
 
         1. Your question must carry the ["ImageResizer" tag](http://stackoverflow.com/questions/tagged/imageresizer) so we can find it.
         2. The question [includes a gist](https://gist.github.com/) with the diagnostics page output.
-        3. The question is about the URL API and [follows best praticies](/docs/best-practices).
+        3. The question is about the URL API and [follows best practices](/docs/best-practices).
         4. The question is detailed enough to answer and shows some diagnostic effort (Just "It's not working" probably won't get you the answer you need)
 
         ####*Email support@imageresizing.net*
@@ -57,7 +57,7 @@ h1 Support
       |Support Contracts
     p
       markdown:
-        There's no better guarantee that our product will work well for your needs than getting a support contract. Check out the **[full range of support contracts here](/support/contracts)**. We also [develop custom plugins for customers](/support/custom_plugins) with a support contract.
+        There's no better way to guarantee that our product will work well for your needs than to get a support contract. Check out the **[full range of support contracts here](/support/contracts)**. We also [develop custom plugins for customers](/support/custom_plugins) with a support contract.
     a href="support/contracts/gold" 
       img src="/img/contracts/contract-hero-gold.png?width=100"
     p style= "font-size: 14pt"
