Apply upstream fixes

--- a/content/docs/v3/plugins/advancedfilters.slim
+++ b/content/docs/v3/plugins/advancedfilters.slim
@@ -130,7 +130,7 @@ ul
     code
       | gimp
     | \- Threshold is applied based on strangely skewed cumulative area, identical to the process used by GIMP.
-p The default (and reccommended) algorithm is 'area'.
+p The default (and recommended) algorithm is 'area'.
 ul
   li
     |  &amp;a.balancewhite=true|area|simple|gimp
