--- a/content/docs/v3/plugins/simplefilters.slim
+++ b/content/docs/v3/plugins/simplefilters.slim
@@ -83,9 +83,10 @@ ol
 h2#usage-v31 Usage (v3.1+)
 p
   strong
-    | Note the order in which effects are applied
-    em MAY CHANGE
-    | in future releases
+    | Note the order in which effects are applied  
+    em
+      |   MAY CHANGE   
+    |   in future releases
 ul
   li
     | &amp;s.grayscale=true|y|ry|ntsc|bt709|flat  (true, ntsc, and y produce identical results)
