Updates from upstream

--- a/content/docs/v3/plugins/whitespacetrimmer.slim
+++ b/content/docs/v3/plugins/whitespacetrimmer.slim
@@ -64,4 +64,4 @@ markdown:
   Either run  `Install-Package ImageResizer.Plugins.WhitespaceTrimmer` in the NuGet package manager, or:
   
   1. Add ImageResizer.Plugins.WhitespaceTrimmer.dll to your project. Make sure AForge.dll, AForge.Math.dll, and AForge.Imaging.dll are copied also, although they do not need to be referenced directly.
-  2.  Add `&lt;add name="WhitespaceTrimmer" /&gt;` inside   `&lt;plugins&gt;&lt;/plugins&gt;` in Web.config.
+  2.  Add `<add name="WhitespaceTrimmer" />` inside   `<resizer><plugins></plugins></resizer>` in Web.config.
