Fix bug in plugin listings for elite and performance editions

--- a/content/plugins/editions/performance.slim
+++ b/content/plugins/editions/performance.slim
@@ -13,4 +13,4 @@ markdown:
   When purchased as the Performance Edition (under the [Domain license](/licenses/domain)), you are allowed to use the plugins on one registered domain and any subdomains. 
   If purchased with the Elite Edition or Support Contracts, you do not need to register your domains.
 
-== partial :my_plugins, {:locals => {display_edition: :creative, includes_editions: defined?(includes_editions) ? includes_editions : [:free]}}
+== partial :my_plugins, {:locals => {display_edition: :performance, includes_editions: defined?(includes_editions) ? includes_editions : [:free]}}
