--- a/content/download.slim
+++ b/content/download.slim
@@ -33,10 +33,9 @@ h1 Download ImageResizer
       | PM> Install-Package ImageResizer.Plugins.DiskCache
       br
       | PM> Install-Package ImageResizer.Plugins.PrettyGifs
-  br
-  p
-    a href="/docs/install/nuget" class="btn btn-primary"
-      strong Nuget Installation Instructions  
+  br 
+  markdown:
+   Looking for bleeding-edge v4? Add this nuget feed: `https://www.myget.org/F/imazen-nightlies/`
 
 
 .titledownload
