Use github-like CSS style for /docs

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -543,3 +543,12 @@ code {
   margin-top:2em;
   margin-bottom:.75em;
 }
+
+.markdown-body code, .markdown-body p{
+  color: rgb(51, 51, 51);
+}
+.markdown-body ul{
+  list-style: disc inside;
+  margin-top: 1em;
+  margin-bottom:1em;
+}
