--- a/content/download.slim
+++ b/content/download.slim
@@ -2,6 +2,8 @@ menu: download
 title: Download the Image Resizer Free
 Libs: -comments, plusone
 Icon: download-alt
+textclass: none
+
 
 h1 Download ImageResizer
 
