Hides video on small screens to improve our responsiveness

--- a/content/index.slim
+++ b/content/index.slim
@@ -100,7 +100,7 @@ h1 ASP.NET library and image server
   h1.home3 style="padding-top: 25px; padding-bottom: 30px"
     |Create images that impress and inspire
   .container
-    .span3.home3
+    .span3.home3.hide_video
       iframe height="252" width="400"src="//www.youtube.com/embed/GEA3uduWylk?rel=0"
     .span3
     .span6
