Adds css for hiding homepage video and docs sidebar bullets

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -550,5 +550,17 @@ code {
 .markdown-body ul{
   list-style: disc inside;
   margin-top: 1em;
-  margin-bottom:1em;
+  margin-bottom:1em; 
 }
+
+.markdown-body.no_bullet ul{
+  list-style: none !important;
+}
+
+@media (max-width: 500px) {
+  .hide_video{
+    display: none !important;
+  }
+}
+
+
