OEM/SaaS is now a 1 year contract. Bronze and Silver are no longer available in 2 year increments.

--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -79,8 +79,8 @@ h1 Licenses
           li 24 hour response time (Mon-Fri)
           li 1 designated point of contact
           li 1 non-emergency support incident per month
-          li 4 hours of architecture planning
-          li 2 years of free major and minor upgrades
+          li 2 hours of architecture planning
+          li 1 year of free major and minor upgrades
           | See Silver or Gold options for a better tier of support.
         .buy-buttons
           a.button1 href="https://store.imazen.io/products/oem-saas-support-contract" class="btn btn-primary"
