--- a/content/support/contracts/index.slim
+++ b/content/support/contracts/index.slim
@@ -62,7 +62,7 @@ h1 Support Contracts
         img alt="ImageResizer Silver" src="/img/contracts/contract-hero-oem.png"
       markdown:
 
-        This contract is specially tailored to clients wishing to use an OEM or SaaS license. The two-year contract includes monthly support incidents, one designated point of contact, and two full hours of architecture planning per year, in order to ensure that ImageResizer is integrated seamlessly into your software, with maximum benefit and usability for your customers.
+        This contract is specially tailored to clients wishing to use an OEM or SaaS license. The twelve-month contract includes monthly support incidents, one designated point of contact, and two full hours of architecture planning, in order to ensure that ImageResizer is integrated seamlessly into your software, with maximum benefit and usability for your customers.
 
       p align="right"
         a.btn.btn-primary href="contracts/oem"
