Added custom implementations call to action

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -563,4 +563,24 @@ code {
   }
 }
 
+.petacdn {
+  
+  padding-top: 25px;
+}
+.petacdn p{
+  font-family: "Droid Sans" !important;
+  font-weight: normal !important;
+  
+  color: #666666;
+  font-size: 20px;
+  text-align:center;
+}
+.callnow p{
+  margin-top:25px;
+  text-align:center;
+  font-family: "Droid Sans" !important;
+  font-weight: bold;
+  color: #da4f49;
+  font-size: 25px;
+}
 
