--- a/content/index.slim
+++ b/content/index.slim
@@ -95,7 +95,26 @@ h1 ASP.NET library and image server
           p
             |Support available
           .clear
-
+.oddhomepageitem
+  .row-fluid
+    .container
+      .span12
+        .petacdn
+          p
+            | Does your responsive image service, CDN, image API, or optimizing proxy deal with 
+            strong 
+              | petabytes of images
+            | ? 
+          p
+            | We can save you 
+            strong 
+              | millions
+            | . Our algorithms are up to 50 times faster than leading alternatives. 
+          p
+            | We implement them in your stack of choice for $250,000 USD, within 16 months.
+        .callnow
+          p
+            | Call +1.812.809.0605 now.
 .row-fluid
   h1.home3 style="padding-top: 25px; padding-bottom: 30px"
     |Create images that impress and inspire
@@ -114,47 +133,47 @@ h1 ASP.NET library and image server
         |.
 
 hr
-  .oddhomepageitem
-    .container
-      .row-fluid.home3
-        .row
-          h1.headerpadding
-            | Benefits
-        .row-fluid
-          .span6
-            a.block.plaintext href="/benefits/compatible"
-              .icons-box
-                i.ico-white.circle-color-full.ico-link
-                h3 Compatible and Standardized
-                p.sidespace
-                  |ImageResizer was designed from the beginning to suit our clients’ needs with as little adaptation as possible. That means working with your CMS, your platform, your software. See how ImageResizer can connect with your business
-                .clear
-          .span6
-            a.block.plaintext href="/benefits/performant"
-              .icons-box
-                i.ico-white.circle-color-full.ico-stats
-                h3 High Performance
-                p.sidespace.home3
-                  |Upgrade to the Performance Edition and scale to millions of images and users. We also support Amazon CloudFront and Microsoft CDN, and you can use S3 or Azure for centralized image storage.
-                .clear
+.oddhomepageitem
+  .container
+    .row-fluid.home3
+      .row
+        h1.headerpadding
+          | Benefits
       .row-fluid
         .span6
-          a.block.plaintext href="/benefits/stable"
+          a.block.plaintext href="/benefits/compatible"
             .icons-box
-              i.ico-white.circle-color-full.ico-shield
-              h3 Secure and Stable
+              i.ico-white.circle-color-full.ico-link
+              h3 Compatible and Standardized
               p.sidespace
-                |Secure by default, ImageResizer protects against DDOS and XSS attacks, and minimizes attack surface with a plugin model. Unlike most imaging libraries, ImageResizer was designed for server-side use and multi-year uptimes since day one.
+                |ImageResizer was designed from the beginning to suit our clients’ needs with as little adaptation as possible. That means working with your CMS, your platform, your software. See how ImageResizer can connect with your business
               .clear
         .span6
-          a.block.plaintext href="https://github.com/imazen/resizer"
+          a.block.plaintext href="/benefits/performant"
             .icons-box
-              i.ico-white.circle-color-full.ico-group
-              h3 Open Source
+              i.ico-white.circle-color-full.ico-stats
+              h3 High Performance
               p.sidespace.home3
-                |Core functionality is free and open source under the freedom license. Everything we offer includes source code and permits modification. 
-                strong We reward pull requests.
+                |Upgrade to the Performance Edition and scale to millions of images and users. We also support Amazon CloudFront and Microsoft CDN, and you can use S3 or Azure for centralized image storage.
               .clear
+    .row-fluid
+      .span6
+        a.block.plaintext href="/benefits/stable"
+          .icons-box
+            i.ico-white.circle-color-full.ico-shield
+            h3 Secure and Stable
+            p.sidespace
+              |Secure by default, ImageResizer protects against DDOS and XSS attacks, and minimizes attack surface with a plugin model. Unlike most imaging libraries, ImageResizer was designed for server-side use and multi-year uptimes since day one.
+            .clear
+      .span6
+        a.block.plaintext href="https://github.com/imazen/resizer"
+          .icons-box
+            i.ico-white.circle-color-full.ico-group
+            h3 Open Source
+            p.sidespace.home3
+              |Core functionality is free and open source under the freedom license. Everything we offer includes source code and permits modification. 
+              strong We reward pull requests.
+            .clear
   .container.home3
     h1.headerpadding
       | Don't Believe Us?
