Drop 2YR support contract options

--- a/content/support/contracts/compare.slim
+++ b/content/support/contracts/compare.slim
@@ -52,7 +52,7 @@ ruby:
             td
               == tier.target_customer
 
-        - {6 => '6 Months', 12 => '1 Year', 24 => '2 Year'}.each do |months, label|
+        - {6 => '6 Months', 12 => '1 Year'}.each do |months, label|
           tr
             td.features-subhead 
               = label
