Publish changes to Bronze (24->48 response time) and Silver (2->6hr response time) and adjust Gold price.

--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -27,7 +27,7 @@ h1 Licenses
             strong Permanent Elite license
           li Free major version upgrades while active
           li 1 non-emergency support incident per month (business hours only)
-          li 24 hour response time (Mon-Fri)
+          li 48 hour response time (Mon-Fri)
           li 1 point of contact supported
           li 2 assisted installations per year
           li 30 minutes architecture planning per year
@@ -42,7 +42,7 @@ h1 Licenses
           h3.licenseprice Starting at $3000
         ul.licensecontent
           strong Includes all Bronze features, plus:
-          li Fast 2 hour response time
+          li 6 hour response time
           li Hotfixes within 7 business days
           li Unlimited employees supported
           li Unlimited business-hours support incidents
@@ -58,9 +58,10 @@ h1 Licenses
       div.licensebox.span3
         div style="background-color: #D6B211;"
           h2.licensetitle Gold
-          h3.licenseprice Starting at $6000
+          h3.licenseprice Starting at $10,000
         ul.licensecontent
           strong Includes all Silver features, plus:
+          li 2 hour response time
           li Hotfixes within 2 business days
           li Unlimited emergency support incidents
           li 5 hours of architecture planning per year
@@ -76,7 +77,7 @@ h1 Licenses
           h3.licenseprice $2800
         ul.licensecontent
           strong This contract is intended for OEM (redistribution) or use in SaaS products. It includes:
-          li 24 hour response time (Mon-Fri)
+          li 48 hour response time (Mon-Fri)
           li 1 designated point of contact
           li 1 non-emergency support incident per month
           li 2 hours of architecture planning
