--- a/content/support/contracts/silver.slim
+++ b/content/support/contracts/silver.slim
@@ -13,7 +13,7 @@ h1 Support Contracts
 - hours_dev = 3
 - hours_planning = 2
 - assist_inst = 5
-- response_hours = 2
+- response_hours = 6
 - hotfix_days = 7
 
 
@@ -32,7 +32,7 @@ h1 Support Contracts
   {:icon => "envelope-alt", :headline => "Custom e-mail to contact support", :description => "When you sign up for this support contract we will create a custom email address that you can use to get priority support."}, 
   {:icon => "cloud-download", :headline => "Free Plugin Upgrades", :description => "Keep your app secure and up to date with free plugin upgrades for the duration of your contract."}]
 
-- purchase_options = [{:product_value => 'Silver Tier 6 Month Contract', :button_text => '&nbsp;$3000/6 months &raquo;'}, {:product_value => 'Silver Tier 1 Year Contract', :button_text => '&nbsp;$5000/yr &raquo;'}, {:product_value => 'Silver Tier 2 Year Contract', :button_text => '&nbsp;$4000/yr with 2 year plan &raquo;'}]
+- purchase_options = [{:product_value => 'Silver Tier 6 Month Contract', :button_text => '&nbsp;$3000/6 months &raquo;'}, {:product_value => 'Silver Tier 1 Year Contract', :button_text => '&nbsp;$5,000/yr &raquo;'}]
 .row
   .span8
     p: img src="/img/contracts/contract-hero-silver.png"
