--- a/content/support/contracts/index.slim
+++ b/content/support/contracts/index.slim
@@ -35,7 +35,7 @@ h1 Support Contracts
       p: a href="contracts/silver"
         img alt="ImageResizer Silver" src="/img/contracts/contract-hero-silver.png"
       markdown:
-        Deploy to production with confidence, knowing we're only a phone call away if something goes wrong. Includes **unlimited support incidents to your entire organization**, with a 2 business-hour response time. Got a 3am disaster? 1 free emergency support incident is included per year.
+        Deploy to production with confidence, knowing we're only a phone call away if something goes wrong. Includes **unlimited support incidents to your entire organization**. Got a 3am disaster? 1 free emergency support incident is included per year.
         
         Millions of daily visitors. Terabytes of images. Complex workflows. Leverage our expertise and ensure your architecture will **stay** secure and performant in the real world. Hours of consulting and custom development are included.
       p align="right"
@@ -45,9 +45,9 @@ h1 Support Contracts
   .span3
     .well
       p: a href="contracts/gold"
-        img alt="ImageResizer Bronze" src="/img/contracts/contract-hero-gold-alt.png"
+        img alt="ImageResizer Gold" src="/img/contracts/contract-hero-gold-alt.png"
       markdown:
-        **Unlimited *emergency* support incidents across your organization. Hot-fixes delivered within 2 business days.** 
+        **Unlimited *emergency* support incidents across your organization, with a 2 hour response time. Hot-fixes delivered within 2 business days.** 
 
         **Up to 20 free hours of custom development and 10 hours of preventative consulting are included.**
       p align="right"
