Add support contract deadline

--- a/content/index.slim
+++ b/content/index.slim
@@ -101,20 +101,20 @@ h1 ASP.NET library and image server
       .span12
         .petacdn
           p
-            | Does your responsive image service, CDN, image API, or optimizing proxy deal with 
-            strong 
-              | petabytes of images
-            | ? 
+            strong
+              | Does your business rely on ImageResizer? 
+            | Ensure you have access to support as you migrate to the new ImageResizer 4.
+            
           p
-            | We can save you 
             strong 
-              | millions
-            | . Our algorithms are up to 50 times faster than leading alternatives. 
+              | Support contracts will not be sold after Nov. 13.
           p
-            | We implement them in your stack of choice for $250,000 USD, within 16 months.
+            | Community support (StackOverflow) will be your only option unless you have active support contract before this date.
+          
         .callnow
           p
-            | Call +1.812.809.0605 now.
+            a href="/support/contracts/compare"
+              | Order your 1 year support contract before Nov 13
 .row-fluid
   h1.home3 style="padding-top: 25px; padding-bottom: 30px"
     |Create images that impress and inspire
